--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,16 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# npm
+node_modules
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# clasp files
+.clasp*
+creds.json
 
-# testing
-/coverage
+# certs
+*.pem
+certs/
 
-# production
-/build
+# build
+dist/
 
-# misc
+# mac
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
