--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,24 @@
-# npm
-node_modules
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# clasp files
-.clasp*
-creds.json
+# dependencies
+/node_modules
+/client/node_modules
+/.pnp
+.pnp.js
 
-# certs
-*.pem
-certs/
+# testing
+/coverage
 
-# build
-dist/
+# production
+/build
 
-# mac
+# misc
 .DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
