--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
@@ -39,7 +40,9 @@
   "devDependencies": {
     "@types/node": "^17.0.14",
     "@types/react": "^17.0.38",
+    "@types/react-burger-menu": "^2.8.3",
     "@types/react-dom": "^17.0.11",
+    "@types/styled-components": "^5.1.24",
     "react-router-dom": "^6.2.1"
   },
   "proxy": "http://localhost:3001"
