--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "",
   "main": "server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "rimraf server/*.js && npx tsc server/index.ts && node server/index.js",
-    "client": "cd client && react-scripts start",
-    "start": "node server/index.js",
-    "init": "rimraf server/*.js && npx tsc server/initSeason.ts && node server/initSeason.js"
+    "install-client": "cd client && npm install",
+    "heroku-postbuild": "npm run install-client && npm run build",
+    "client": "cd client && npm start",
+    "start": "rimraf server/*.js && npx tsc server/index.ts && node server/index.js",
+    "init": "rimraf server/*.js && npx tsc server/initSeason.ts && node server/initSeason.js",
+    "dev": "concurrently -n 'server,client' -c 'blue,green' \"nodemon server/index.ts\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "concurrently": "^7.0.0",
     "express": "^4.17.2",
     "googleapis": "^95.0.0",
     "luxon": "^2.3.0",
@@ -22,7 +24,9 @@
     "morgan-body": "^2.6.6",
     "node-fetch": "^2.6.7",
     "node-html-parser": "^5.2.0",
+    "nodemon": "^2.0.15",
     "rimraf": "^3.0.2",
+    "ts-node": "^10.7.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -35,7 +39,6 @@
     "@typescript-eslint/parser": "^5.13.0",
     "eslint": "^8.10.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-react": "^7.29.3",
-    "typescript": "^4.7.0-dev.20220304"
+    "eslint-plugin-react": "^7.29.3"
   }
 }
