--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "nodemon": "^2.0.15",
     "rimraf": "^3.0.2",
     "ts-node": "^10.7.0",
+    "typescript": "^4.6.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.2",
+    "@types/body-parser": "^1.19.2",
+    "@types/express": "^4.17.13",
     "@types/luxon": "^2.0.9",
     "@types/node": "^17.0.14",
     "@types/node-fetch": "^2.6.1",
@@ -39,6 +41,7 @@
     "@typescript-eslint/parser": "^5.13.0",
     "eslint": "^8.10.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-react": "^7.29.3"
+    "eslint-plugin-react": "^7.29.3",
+    "typescript": "^4.6.2"
   }
 }
