--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/express": "^4.17.13",
     "body-parser": "^1.19.1",
     "concurrently": "^7.0.0",
     "express": "^4.17.2",
