--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -42,8 +43,7 @@
     "@types/react": "^17.0.38",
     "@types/react-burger-menu": "^2.8.3",
     "@types/react-dom": "^17.0.11",
-    "@types/styled-components": "^5.1.24",
-    "react-router-dom": "^6.2.1"
+    "@types/styled-components": "^5.1.24"
   },
   "proxy": "http://localhost"
 }
