--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.40",
+    "@types/react-dom": "^17.0.13",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
@@ -38,12 +38,10 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://localhost",
   "devDependencies": {
-    "@types/node": "^17.0.14",
-    "@types/react": "^17.0.38",
-    "@types/react-burger-menu": "^2.8.3",
-    "@types/react-dom": "^17.0.11",
-    "@types/styled-components": "^5.1.24"
-  },
-  "proxy": "http://localhost"
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0"
+  }
 }
