add statistics page

--- a/teamConfig.json
+++ b/teamConfig.json
@@ -1,6 +1,7 @@
 {
     "saison":"21-22",
     "round":"vr",
+    "vereinId":"15043",
     "teams":[
         {
             "league":"Herren-Bezirksklasse-Gr-1",
