--- a/package.json
+++ b/package.json
@@ -21,16 +21,19 @@
     "@types/luxon": "^2.3.0",
     "@types/node": "^17.0.21",
     "@types/node-fetch": "^2.6.1",
+    "@types/tough-cookie": "^4.0.1",
     "@types/uuid": "^8.3.4",
     "body-parser": "^1.19.1",
     "concurrently": "^7.0.0",
     "express": "^4.17.2",
+    "form-data": "^4.0.0",
     "googleapis": "^95.0.0",
     "luxon": "^2.3.0",
     "node-fetch": "^2.6.7",
     "node-html-parser": "^5.2.0",
     "nodemon": "^2.0.15",
     "rimraf": "^3.0.2",
+    "tough-cookie": "^4.0.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2",
     "uuid": "^8.3.2"
