--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "heroku-postbuild": "npm run install-client && npm run build",
     "client": "cd client && npm start",
     "start": "ts-node server/index.ts",
-    "init": "ts-node server/initSeason.js",
+    "init": "ts-node server/initSeason.ts",
     "dev": "concurrently -n 'server,client' -c 'blue,green' \"nodemon server/index.ts\" \"npm run client\""
   },
   "keywords": [],
@@ -32,6 +32,7 @@
     "node-fetch": "^2.6.7",
     "node-html-parser": "^5.2.0",
     "nodemon": "^2.0.15",
+    "react-reveal": "^1.2.2",
     "rimraf": "^3.0.2",
     "tough-cookie": "^4.0.0",
     "ts-node": "^10.7.0",
