--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "server/index.ts",
   "scripts": {
     "build": "cd client && npm run build",
-    "install-client": "cd client && npm install",
-    "heroku-postbuild": "npm run install-client && npm run build",
-    "client": "cd client && npm start",
+    "postinstall": "cd client && npm install",
+    "client": "cd client && npm run dev",
     "start": "ts-node server/index.ts",
     "init": "ts-node server/initSeason.ts",
     "dev": "concurrently -n 'server,client' -c 'blue,green' \"nodemon server/index.ts\" \"npm run client\""
