--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/tough-cookie": "^4.0.1",
     "@types/uuid": "^8.3.4",
     "body-parser": "^1.19.1",
+    "caniuse-lite": "^1.0.30001434",
     "concurrently": "^7.0.0",
     "express": "^4.17.2",
     "form-data": "^4.0.0",
