--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/index.ts",
   "scripts": {
     "client": "cd client && npm run dev",
-    "build": "tsc -p . && yarn replace-ts-alias -p .",
+    "build": "tsc -p . && tsc-alias -p ./tsconfig.json",
     "start": "node ./server/build/server/index.js",
     "init": "ts-node server/initSeason.ts",
     "dev": "concurrently -n 'server,client' -c 'blue,green' \"nodemon server/index.ts\" \"npm run client\""
@@ -28,15 +28,18 @@
     "form-data": "^4.0.0",
     "googleapis": "^95.0.0",
     "luxon": "^2.3.0",
+    "node": "^14.17.3",
     "node-fetch": "^2.6.7",
     "node-html-parser": "^5.2.0",
     "nodemon": "^2.0.15",
     "react-reveal": "^1.2.2",
     "rimraf": "^3.0.2",
     "tough-cookie": "^4.0.0",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.2",
-    "uuid": "^8.3.2"
+    "ts-loader": "^9.4.4",
+    "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.7",
+    "uuid": "^8.3.2",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.13.0",
@@ -44,6 +47,7 @@
     "eslint": "^8.10.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.29.3",
-    "typescript": "^4.6.2"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
