--- a/teamConfig.json
+++ b/teamConfig.json
@@ -1,106 +1,96 @@
 {
-	"saison": "22-23",
-	"round": "rr",
+	"saison": "23-24",
+	"round": "vr",
 	"vereinId": "15043",
 	"teams": [
 		{
-			"league": "Herren-Bezirksklasse-Gr-1",
-			"groupId": "415408",
-			"teamId": "2590414",
+			"league": "Kreisliga-A-Gr-2",
+			"groupId": "446022",
+			"teamId": "2702006",
 			"teamName": "TSG-Oberkirchberg",
 			"enemies": [
 				{
-					"enemyId": "2589779",
-					"enemyName": "TSF-Ludwigsfeld-II",
-					"enemyClubId": "15034"
+					"enemyId": "2699947",
+					"enemyName": "Sport-Club-Bach",
+					"enemyClubId": "15004"
 				},
 				{
-					"enemyId": "2590414",
-					"enemyName": "TSG-Oberkirchberg",
-					"enemyClubId": "15043"
+					"enemyId": "2701972",
+					"enemyName": "TSV-Erbach-II",
+					"enemyClubId": "15019"
 				},
 				{
-					"enemyId": "2589216",
-					"enemyName": "SF-Rammingen",
-					"enemyClubId": "15048"
-				},
-				{
-					"enemyId": "2590869",
+					"enemyId": "2701678",
 					"enemyName": "SC-Staig-IV",
 					"enemyClubId": "15056"
 				},
 				{
-					"enemyId": "2592915",
-					"enemyName": "VfB-Ulm",
+					"enemyId": "2703879",
+					"enemyName": "VfB-Ulm-II",
 					"enemyClubId": "15060"
 				},
 				{
-					"enemyId": "2589434",
-					"enemyName": "TTC-Senden-Hoell",
-					"enemyClubId": "15055"
+					"enemyId": "2702006",
+					"enemyName": "SC-Berg-II",
+					"enemyClubId": "15007"
 				},
 				{
-					"enemyId": "2592784",
-					"enemyName": "TSV-Illertissen",
-					"enemyClubId": "15029"
+					"enemyId": "2703688",
+					"enemyName": "SSV-Ulm-1846-IV",
+					"enemyClubId": "15061"
 				},
 				{
-					"enemyId": "2589867",
-					"enemyName": "TSV-Herrlingen-III",
-					"enemyClubId": "15025"
+					"enemyId": "2703005",
+					"enemyName": "TSG-Oberkirchberg",
+					"enemyClubId": "15043"
 				},
 				{
-					"enemyId": "2590964",
-					"enemyName": "TSV-Holzheim-II",
-					"enemyClubId": "15026"
-				},
-				{
-					"enemyId": "2591980",
-					"enemyName": "TSV-Neu-Ulm-II",
-					"enemyClubId": "15041"
+					"enemyId": "2700647",
+					"enemyName": "SV-Unterstadion",
+					"enemyClubId": "15062"
 				}
 			]
 		},
 		{
-			"league": "Herren-Kreisliga-B-Gr-2",
-			"groupId": "415733",
-			"teamId": "2592305",
+			"league": "Herren-Kreisliga-B-Gr-1",
+			"groupId": "445617",
+			"teamId": "2703666",
 			"teamName": "TSG-Oberkirchberg-II",
 			"enemies": [
 				{
-					"enemyId": "2592301",
-					"enemyName": "TSG-Rottenacker",
-					"enemyClubId": "15051"
+					"enemyId": "2701404",
+					"enemyName": "TSV-Weissenhorn-II",
+					"enemyClubId": "15065"
 				},
 				{
-					"enemyId": "2589912",
-					"enemyName": "SC-Staig-V",
-					"enemyClubId": "15056"
+					"enemyId": "2701731",
+					"enemyName": "FC-Strass-III",
+					"enemyClubId": "15057"
 				},
 				{
-					"enemyId": "2593164",
-					"enemyName": "TSV-Erbach-III",
-					"enemyClubId": "15019"
-				},
-				{
-					"enemyId": "2590114",
-					"enemyName": "TTC-Ehingen-II",
-					"enemyClubId": "15017"
-				},
-				{
-					"enemyId": "2592305",
+					"enemyId": "2703666",
 					"enemyName": "TSG-Oberkirchberg-II",
 					"enemyClubId": "15043"
 				},
 				{
-					"enemyId": "2589866",
-					"enemyName": "SpVgg-Obermarchtal",
-					"enemyClubId": "15044"
+					"enemyId": "2702738",
+					"enemyName": "TSV-Illertissen-II",
+					"enemyClubId": "15029"
 				},
 				{
-					"enemyId": "2592358",
-					"enemyName": "SV-Unterstadion-II",
-					"enemyClubId": "15062"
+					"enemyId": "2700197",
+					"enemyName": "SC-Voehringen-III",
+					"enemyClubId": "15064"
+				},
+				{
+					"enemyId": "2703042",
+					"enemyName": "TSF-Ludwigsfeld-IV",
+					"enemyClubId": "15034"
+				},
+				{
+					"enemyId": "2700877",
+					"enemyName": "TTC-Senden-Hoell-II",
+					"enemyClubId": "15055"
 				}
 			]
 		}
