update team config to drive, update node, remove old reveal library

--- a/client/app.yaml
+++ b/client/app.yaml
@@ -1,14 +1,46 @@
-runtime: nodejs16
+runtime: nodejs20
 
 handlers:
   # Serve all static files with url ending with a file extension
 
-  - url: /(.*\..+)$
-    static_files: build/\1
-    upload: build/(.*\..+)$
+  - url: /(.*\.css)
+    mime_type: text/css
+    static_files: dist/\1
     secure: always
+    upload: dist/(.*\.css)
+
+  - url: /(.*\.html)
+    mime_type: text/html
+    static_files: dist/\1
+    upload: dist/(.*\.html)
+    secure: always
+
+  - url: /(.*\.js)
+    mime_type: text/javascript
+    static_files: dist/\1
+    upload: dist/(.*\.js)
+    secure: always
+
+  - url: /(.*\.txt)
+    mime_type: text/plain
+    static_files: dist/\1
+    upload: dist/(.*\.txt)
+    secure: always
+
+  - url: /(.*\.xml)
+    mime_type: application/xml
+    static_files: dist/\1
+    upload: dist/(.*\.xml)
+    secure: always
+
+  # image files
+  - url: /(.*\.(bmp|gif|ico|jpeg|jpg|png))
+    static_files: dist/\1
+    upload: dist/(.*\.(bmp|gif|ico|jpeg|jpg|png))
+    secure: always
+
   # Catch all handler to index.html
   - url: /.*
-    static_files: build/index.html
-    upload: build/index.html
+    static_files: dist/index.html
+    upload: dist/index.html
     secure: always
