--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # dependencies
 /node_modules
 /client/node_modules
+/server/node_modules
 /.pnp
 .pnp.js
 
@@ -10,8 +11,8 @@
 /coverage
 
 # production
-/build
-/client/build
+/client/dist
+/server/build
 
 # misc
 .DS_Store
