--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,9 @@
     "@types/node-fetch": "^2.6.11",
     "@types/tough-cookie": "^4.0.5",
     "@types/uuid": "^10.0.0",
+    "async-mutex": "^0.5.0",
     "body-parser": "^1.20.2",
+    "dotenv": "^17.2.1",
     "express": "^4.19.2",
     "form-data": "^4.0.0",
     "googleapis": "^140.0.1",
