--- a/server/package.json
+++ b/server/package.json
@@ -35,17 +35,18 @@
     "ts-loader": "^9.5.1",
     "tsc-alias": "^1.8.10",
     "uuid": "^10.0.0",
+    "winston": "^3.17.0",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.25.1",
-    "@types/node": "^22.1.0",
+    "@types/node": "^22.18.6",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "eslint": "^8.10.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.29.3",
     "tsx": "^4.16.5",
-    "typescript": "^5.5.4"
+    "typescript": "^5.9.2"
   }
 }
