--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /server/teamConfig.json
 /server/googleConfigs.json
 /server/clubs.json
+/server/creds.json
 /.pnp
 .pnp.js
 .env
@@ -28,5 +29,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-backend.yaml
