--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/firestore": "^7.11.6",
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.21",
     "@types/luxon": "^3.4.2",
@@ -25,8 +26,9 @@
     "dotenv": "^17.2.1",
     "express": "^4.19.2",
     "form-data": "^4.0.0",
-    "googleapis": "^140.0.1",
+    "googleapis": "^161.0.0",
     "luxon": "^3.4.4",
+    "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
     "node-html-parser": "^6.1.13",
     "nodemon": "^3.1.4",
