--- a/.github/workflows/main_tt-oki.yml
+++ b/.github/workflows/main_tt-oki.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: '18'
 
-      # --- Build the client ---
+      # --- Build client ---
       - name: Install client dependencies
         working-directory: ./client
         run: npm ci
@@ -27,7 +27,7 @@ jobs:
         working-directory: ./client
         run: npm run build
 
-      # --- Build the server ---
+      # --- Build server ---
       - name: Install server dependencies
         working-directory: ./server
         run: npm ci
@@ -36,14 +36,19 @@ jobs:
         working-directory: ./server
         run: npm run build
 
-      # --- Set up gcloud and deploy ---
+      # --- Authenticate with Google Cloud ---
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      # --- Set up the Google Cloud SDK ---
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
 
+      # --- Deploy to App Engine ---
       - name: Deploy to App Engine
         run: |
           gcloud app deploy app.yaml backend.yaml dispatch.yaml --quiet
