--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "serve -s dist"
+    "start": "serve -s deploy"
   },
   "dependencies": {
     "@types/luxon": "^3.4.2",
