swap deployment order

--- a/.github/workflows/main_tt-oki.yml
+++ b/.github/workflows/main_tt-oki.yml
@@ -73,4 +73,4 @@ jobs:
       # 8️⃣ Deploy App Engine services
       - name: Deploy to App Engine
         run: |
-          gcloud app deploy client/app.yaml server/backend.yaml dispatch.yaml --verbosity=debug
+          gcloud app deploy server/backend.yaml client/app.yaml dispatch.yaml --verbosity=debug
