cleanup github actions

--- a/.github/workflows/main_tt-oki.yml
+++ b/.github/workflows/main_tt-oki.yml
@@ -62,15 +62,8 @@ jobs:
           rm -rf server/deploy
           mkdir -p server/deploy
           cp -r server/build/* server/deploy/
-      
-      - name: List files to deploy
-        run: |
-          echo "Client deploy files:"
-          ls -R client/deploy
-          echo "Server deploy files:"
-          ls -R server/deploy
 
       # 8️⃣ Deploy App Engine services
       - name: Deploy to App Engine
         run: |
-          gcloud app deploy server/backend.yaml client/app.yaml dispatch.yaml --verbosity=debug
+          gcloud app deploy server/backend.yaml client/app.yaml dispatch.yaml --quiet
